--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/b120e777af.js" crossorigin="anonymous"></script>
     <title>Todo List</title>
   </head>
   <body>
@@ -25,15 +26,11 @@
             <div class="form-group">
             <label for="add-task">Write a task</label>
             <input type="text" class="form-control" id="add-task" placeholder="write task">
-            </div>
             <button type="submit" class="btn btn-primary">Add task</button>
+            </div>
+            
         </form>
         <ul class="list-group">
-            <!-- <li class="list-group-item active">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li> -->
         </ul>
     </div>
 
