add warning / confirm function

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
         </ul>
     </div>
 
+    <div id="warning-overlay">
+        <div class="container">
+            <div class="card text-center">
+                <h5 class="card-header bg-danger">
+                Warning
+                </h5>
+                <div class="card-body">
+                <p class="card-text">Are you shure you wanna delete task?</p>
+                <button data="yes" type="button" class="btn btn-success">Yes</button>
+                <button data="no" type="button" class="btn btn-primary">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="app.js"></script>
   </body>
 </html>
